--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-icons/all-files": "^4.1.0",
     "axios": "^1.2.2",
+    "bootstrap": "^5.3.5",
     "classnames": "^2.5.1",
     "eslint": "^9.20.0",
     "gray-matter": "^4.0.3",
