--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-icons/all-files": "^4.1.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.3.5",
     "classnames": "^2.5.1",
