--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.3.5",
     "classnames": "^2.5.1",
+    "critters": "^0.0.23",
     "eslint": "^9.20.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
