--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mdx-js/react": "^3.1.1",
     "@react-icons/all-files": "^4.1.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -35,6 +36,8 @@
     "react-phone-input-2": "^2.15.1",
     "react-scroll-trigger": "^0.6.14",
     "react-syntax-highlighter": "^15.5.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
