--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^9.20.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
+    "netlify-cms-oauth-provider-node": "^2.0.0",
     "next": "^14.0.0",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^5.15.0",
@@ -33,6 +34,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.42.0",
     "react-intersection-observer": "^9.4.1",
+    "react-markdown": "^10.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-scroll-trigger": "^0.6.14",
     "react-syntax-highlighter": "^15.5.0",
