--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "eslint-config-next": "^15.1.6"
+    "@types/node": "^22.7.4",
+    "@types/react": "^18.3.7",
+    "@types/react-dom": "^18.3.2",
+    "eslint-config-next": "^15.1.6",
+    "typescript": "^5.6.3"
   }
 }
