--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --max-warnings=0",
     "cms": "npx decap-server"
   },
   "engines": {
-    "node": ">=18.17.0",
+    "node": ">=20.9.0",
     "npm": ">=9.0.0"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
     "netlify-cms-oauth-provider-node": "^2.0.0",
-    "next": "^14.0.0",
+    "next": "^16.0.1",
     "next-mdx-remote": "^5.0.0",
     "next-seo": "^5.15.0",
     "next-sitemap": "^4.2.3",
@@ -47,10 +47,14 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^22.7.4",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.2",
-    "eslint-config-next": "^15.1.6",
+    "autoprefixer": "^10.4.22",
+    "eslint-config-next": "^16.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.6.3"
   }
 }
