--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdx-js/react": "^3.1.1",
+    "@next/font": "^14.2.15",
     "@react-icons/all-files": "^4.1.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
