--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.5.1",
     "critters": "^0.0.23",
     "eslint": "^9.20.0",
+    "framer-motion": "^12.23.26",
     "gray-matter": "^4.0.3",
     "gsap": "^3.11.4",
     "netlify-cms-oauth-provider-node": "^2.0.0",
